# Dynamic-Obstacle-Avoidance-Utilizing-Reinforcement-Learning

./: README.md  frames_2025-11-13_05.18.31.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bumperbot_controller/share/bumperbot_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/bumperbot_description/share/bumperbot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/bumperbot_motion/lib/bumperbot_motion/: a_star_planner.py  pure_pursuit.py
install/bumperbot_motion/share/bumperbot_motion/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
src/bumperbot_controller/: CMakeLists.txt
src/bumperbot_controller/config/: bumperbot_controllers.yaml  joy_teleop.yaml
src/bumperbot_description/rviz/: display.rviz
src/bumperbot_motion/: CMakeLists.txt  package.xml  setup.py
src/bumperbot_motion/bumperbot_motion/: a_star_planner.py  pure_pursuit.py
src/bumperbot_msgs/: CMakeLists.txt  package.xml
src/bumperbot_navigation/config/: planner_server.yaml
src/bumperbot_planning/: CMakeLists.txt
src/bumperbot_py_examples/: package.xml
src/bumperbot_py_examples/bumperbot_py_examples/: simple_publisher.py  simple_tf_kinematics.py
src/bumperbot_world/: package.xml  setup.cfg  setup.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
(+208 files in other folders)
